# alcalor-analysis

./: .env.example  .gitignore  README.md  main.py  mexico_analysis.py  pyproject.toml
src/alcalor_analysis/: __init__.py  cli.py  db.py  nlp.py  report.py
src/alcalor_analysis/queries/: __init__.py  disasters.py  economic.py  political.py  security.py  temporal.py
src/alcalor_analysis/viz/: __init__.py  plots.py  theme.py
