[project]
name = "alcalor-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "connectorx>=0.4.4",
    "duckdb>=1.4.3",
    "polars>=1.36.1",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
]
